// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Litige button render in progress 1`] = `
<button
  className="button is-light is-pulled-right"
  disabled={true}
  id="button-litige"
  onClick={[Function]}
  style={
    Object {
      "transition": "background-color 0.4s ease",
    }
  }
  type="button"
>
  Fichier en cours d'instruction
</button>
`;

exports[`Litige button render litige 1`] = `
<button
  className="button is-danger is-pulled-right"
  disabled={false}
  id="button-litige"
  onClick={[Function]}
  style={
    Object {
      "transition": "background-color 0.4s ease",
    }
  }
  type="button"
>
  Rejeter
</button>
`;

exports[`Litige button render locked 1`] = `
<button
  className="button is-success is-pulled-right"
  disabled={true}
  id="button-litige"
  onClick={[Function]}
  style={
    Object {
      "transition": "background-color 0.4s ease",
    }
  }
  type="button"
>
  Valider
</button>
`;

exports[`Litige button render rejected 1`] = `
<button
  className="button is-warning is-pulled-right"
  disabled={false}
  id="button-litige"
  onClick={[Function]}
  style={
    Object {
      "transition": "background-color 0.4s ease",
    }
  }
  type="button"
>
  Litige
</button>
`;

exports[`Litige button render validate 1`] = `
<button
  className="button is-success is-pulled-right"
  disabled={false}
  id="button-litige"
  onClick={[Function]}
  style={
    Object {
      "transition": "background-color 0.4s ease",
    }
  }
  type="button"
>
  Valider
</button>
`;
